Websocket connect to server